--- a/app/src/main/res/menu/top_menu_main_indxe.xml
+++ b/app/src/main/res/menu/top_menu_main_indxe.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/topNavigationSearchItem"
         android:icon="@drawable/top_menu_add"
-        app:showAsAction="ifRoom"
-        android:title="검색" />
+        android:onClick="addList"
+        android:title="검색"
+        app:showAsAction="ifRoom" />
 
 </menu>
