--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -4,6 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlayActivity">
+    tools:context=".PlayOCRActivity">
+
+    <TextView
+        android:id="@+id/OCRtext"
+        android:layout_width="parent_content"
+        android:layout_height="parent_content"
+        android:layout_margin="20dp"
+        android:text="OCR Text"
+        android:textColor="@color/black"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/selectedImage"
+        app:layout_constraintBottom_toTopOf="@+id/makeProblem"/>
+
+    <ImageView
+        android:id="@+id/selectedImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/makeProblem"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/goBack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="20dp"
+        android:text="문제 만들기"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:background="@drawable/blue_rounded_rectangle"
+        />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/goBack"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/makeProblem"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="20dp"
+        android:text="OCR 재실행"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:background="@drawable/blue_rounded_rectangle"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
