--- a/app/src/main/res/layout/activity_play_ocr.xml
+++ b/app/src/main/res/layout/activity_play_ocr.xml
@@ -3,56 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/backgroundGray"
     android:layout_height="match_parent"
     tools:context=".PlayOCRActivity">
-
-    <TextView
-        android:id="@+id/OCRtext"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="20dp"
-        android:text="OCR Text"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/selectedImage"
-        app:layout_constraintBottom_toTopOf="@+id/makeProblem"/>
-
     <ImageView
         android:id="@+id/selectedImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".7"
+        android:layout_margin="20dp"
+        tools:ignore="ContentDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/makeProblem"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/retry"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="20dp"
-        android:text="문제 만들기"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:background="@drawable/blue_rounded_rectangle"
-        />
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/retry"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/makeProblem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="20dp"
-        android:text="OCR 재실행"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:background="@drawable/blue_rounded_rectangle"
-        />
+        <TextView
+            android:background="@color/white"
+            android:id="@+id/OCRtext"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="20dp"
+            android:text="OCR Text"
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/selectedImage"
+            app:layout_constraintBottom_toTopOf="@+id/makeProblem"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/makeProblem"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/blue_rounded_rectangle"
+            android:text="문제 만들기"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
