--- a/app/src/main/res/layout/activity_play_ocr.xml
+++ b/app/src/main/res/layout/activity_play_ocr.xml
@@ -17,20 +17,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="20dp"
+        android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/selectedImage"
+        app:layout_constraintBottom_toTopOf="@+id/makeProblem">
         <TextView
-            android:background="@color/white"
             android:id="@+id/OCRtext"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="OCR Text"
             android:textColor="@color/black"
             android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/selectedImage"
-            app:layout_constraintBottom_toTopOf="@+id/makeProblem"/>
-
+            />
+    </ScrollView>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/makeProblem"
             android:layout_width="0dp"
