--- a/app/src/main/res/layout/activity_text_highlight.xml
+++ b/app/src/main/res/layout/activity_text_highlight.xml
@@ -6,50 +6,55 @@
     android:layout_height="match_parent"
     tools:context=".TextHighlightActivity">
 
-    <ImageView
-        android:id="@+id/selectedImage3"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="20dp"
-        android:layout_weight=".7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
+    <!--    <ImageView-->
+<!--        android:id="@+id/selectedImage3"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:layout_margin="20dp"-->
+<!--        android:layout_weight=".7"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:ignore="ContentDescription" />-->
 
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="20dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/makeProblem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/selectedImage">
+<!--    <ScrollView-->
+<!--        android:id="@+id/scrollView"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_margin="20dp"-->
+<!--        android:background="@color/white"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/textView">-->
 
-        <TextView
-            android:id="@+id/OCRtext"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="OCR Text"
-            android:textColor="@color/black"
-            android:textSize="16dp" />
-    </ScrollView>
+<!--        <TextView-->
+<!--            android:id="@+id/OCRtext"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="OCR Text"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="16dp" />-->
+<!--    </ScrollView>-->
 
     <TextView
-        android:id="@+id/OCRtext3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="OCR Text"
-        android:textColor="@color/black"
-        android:textSize="16dp" />
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="139dp"
+        android:layout_marginTop="211dp"
+        android:layout_marginEnd="214dp"
+        android:layout_marginBottom="433dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_save_Blank"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/makeProblem3"
+        android:id="@+id/btn_save_Blank"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:layout_marginBottom="44dp"
         android:background="@drawable/blue_rounded_rectangle"
         android:text="저장하기"
         android:textColor="@color/white"
@@ -57,4 +62,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
