--- a/app/src/main/res/layout/activity_text_highlight.xml
+++ b/app/src/main/res/layout/activity_text_highlight.xml
@@ -64,4 +64,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/makeProblemButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="158dp"
+        android:layout_marginTop="159dp"
+        android:layout_marginEnd="159dp"
+        android:layout_marginBottom="101dp"
+        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/btn_save_Blank"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
