--- a/app/src/main/res/layout/activity_text_highlight.xml
+++ b/app/src/main/res/layout/activity_text_highlight.xml
@@ -8,12 +8,9 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="369dp"
-        android:layout_height="339dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="308dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/btn_save_Blank"
         app:layout_constraintEnd_toEndOf="parent"
